sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:3: error: not found: value getNOmbreValeurs
  var longeur=getNOmbreValeurs()
              ^AlgBubbleSort1:8: error: not found: value longueur
  for(i<- 0 to longueur){
               ^AlgBubbleSort1:10: error: not found: value getvaleur
    test2=getvaleur(i+1)
          ^